--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 <h1>Simon</h1>
+<h1 id="level">Click Start to Begin</h1>
     <div class="start-screen">
         <button>START</button>
     </div>
