--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <h1>Simon</h1>
-<h1 id="level">Click Start to Begin</h1>
+<h1 id="level">Press Start to Play</h1>
     <div class="start-screen">
         <button>START</button>
     </div>
@@ -26,4 +26,5 @@
         <div class="panel bottom-right"></div>
     </div> 
 </body>
+<p>Coded by MarQuez LeDay</p>
 </html>
